fix: indicator not working